[package]
name = "rtxflash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cxx = "1.0"
serialport = "4"
strum = "0"
strum_macros = "0"
text-colorizer = "1"
usb_enumeration = "=0.0.3"

[build-dependencies]
# cxx-build = "1.0"
